--- a/index.html
+++ b/index.html
@@ -13,16 +13,18 @@
 
 	<body>
 		<header>
+			<img src="./169-1690080_graphic-black-and-white-dk-png-icon-free.png" alt="transparent white globe">
 			<h1>World Database Lookup</h1>
 		</header>
 
 		<main>
 			<div id="controls">
-				<label for="country">Country:</label>
+<!--				<label for="country">Country:</label>-->
 				<input id="country" type="search" name="country" placeholder="Enter country name" />
-				<button id="lookup">Lookup</button>
+				<button id="countrylookup">Lookup Country</button>
+				<button id="citylookup">Lookup Cities</button>
 			</div>
-			
+
 			<div id="result">
 				<!-- countries will appear here -->
 			</div>
